--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,15 +1,29 @@
 @lost flexbox flex;
 
-@custom-media --small-viewport (max-width: 25em);
-@custom-media --medium-viewport (max-width: 52em);
+@custom-media --small-album-breakpoint (max-width: 25em);
+@custom-media --medium-album-breakpoint (max-width: 52em);
+@custom-media --expansion-breakpoint (max-width: 58em);
+@custom-media --expansion-padding-breakpoint (max-width: 1280px);
 
 html {
   font-family: system, -apple-system, ".SFNSDisplay-Regular", "Helvetica Neue", "Lucida Grande";
   font-size: responsive;
+  min-font-size: 15px;
+  box-sizing: border-box;
 }
 
-h1 {
-  font-size: 4em;
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+/*css colour transitions*/
+
+body, .expansion {
+  transition: background-color 0.20s;
+}
+
+h1, h4, p, .thumbnail-title, .thumbnail-artist, .expansion li, .rating {
+  transition: color 0.45s;
 }
 
 header {
@@ -25,20 +39,30 @@ header {
   text-align: center;
 }
 
+
+h1 {
+  font-size: 4em;
+}
+
+p {
+  line-height: 2em;
+}
+
 .posts {
   lost-center: 1280px;
   clear: fix;
+  position: relative;
 }
 
 .post {
   lost-waffle: 1/4;
 }
 
-@media (--medium-viewport) {
+@media (--medium-album-breakpoint) {
   .post { lost-waffle: 1/2; }
 }
 
-@media (--small-viewport) {
+@media (--small-album-breakpoint) {
   .post { lost-waffle: 1/1; }
 }
 
@@ -53,4 +77,73 @@ header {
 .thumbnail-description div {
   text-align: center;
   margin: 4px 0;
+}
+
+.thumbnail-title {
+  font-size: 1em;
+}
+
+.thumbnail-artist {
+  font-size: 0.92em;
+  color: #999;
+}
+
+/* prevent overflow */
+.thumbnail-title, .thumbnail-artist {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.expansion {
+  clear: fix;
+  display: none;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  padding: 5% 0;
+}
+
+.filler {
+  display: none;
+}
+
+/* expansion styles */
+
+.side-info {
+  display: flex;
+  lost-column: 1/3 0 no-flex;
+}
+
+iframe {
+  margin: 0 auto;
+}
+
+.side-item h4 {
+  margin: 0;
+}
+
+.expansion-content {
+  lost-column: 2/3 0 no-flex;
+}
+
+@media (--expansion-breakpoint) {
+  .side-info, .expansion-content { lost-column: 1/1 0 no-flex; }
+}
+
+@media (--expansion-padding-breakpoint) {
+  .expansion {
+    padding: 5% 3%;
+  }
+}
+
+.height-transition {
+    -webkit-transition: max-height 0.5s ease-in-out;
+    -moz-transition: max-height 0.5s ease-in-out;
+    -o-transition: max-height 0.5s ease-in-out;
+    transition: max-height 0.5s ease-in-out;
+    overflow-y: hidden;
+}
+.height-transition-hidden {
+    max-height: 0;
 }
