Add youtube shortcode

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
 <header>
   <div class="jumbotron">
     <h1>Best of 2015</h1>
-    <p>This is a list of all my favourite music to come out this year.</p>
+    <p>A list of all my favourite music to come out this year 🎉</p>
   </div>
 </header>
 
