--- a/layouts/shortcodes/spotify.html
+++ b/layouts/shortcodes/spotify.html
@@ -1,1 +1,1 @@
-<iframe src="https://embed.spotify.com/?uri={{ .Get 0 }}" height="300" frameborder="0" allowtransparency="true"></iframe>
+<iframe src=about:blank data-src="https://embed.spotify.com/?uri={{ .Get 0 }}" height="300" frameborder="0" allowtransparency="true" onload=lzld(this)></iframe>
