--- a/layouts/shortcodes/youtube.html
+++ b/layouts/shortcodes/youtube.html
@@ -1,1 +1,1 @@
-<iframe width="560" height="315" src="https://www.youtube.com/embed/{{ .Get 0 }}" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src=about:blank data-src="https://www.youtube.com/embed/{{ .Get 0 }}" frameborder="0" allowfullscreen onload=lzld(this)></iframe>
