--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,50 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Cathode</title>
+  <title>{{ .Site.Title }}</title>
+  <link rel="shortcut icon" href="favicon/logo.ico">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/dist/style.css">
-  <script src="/js/jquery.js"></script>
-  <script src="/js/lazyload.min.js"></script>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/dist/style.css">
+  <script src="js/jquery.js"></script>
+  <script src="js/lazyload.min.js"></script>
   {{ if .Site.Params.browserProcessing }}
-    <script src="/js/colibri.min.js"></script>
+    <script src="js/colibri.min.js"></script>
   {{ end }}
-  <script src="/js/app.js"></script>
+  <script src="js/app.js"></script>
 </head>
+
 <body>
+
 <header>
   <div class="jumbotron">
-    <h1>Best of 2015</h1>
-    <p>A list of all my favourite music to come out this year 🎉</p>
+    <h1>{{ .Site.Params.jumbotronTitle }}</h1>
+    <p>{{ .Site.Params.jumbotronSubtitle1 }}</p>
+    {{ if .Site.Params.jumbotronAuthor }}
+      <p>Made by <a href="{{ .Site.Params.jumbotronAuthorLink }}">{{ .Site.Params.jumbotronAuthor }}</a></p>
+    {{ end }}
   </div>
 </header>
 
-<main class="posts">
-  {{ range $index, $post := .Data.Pages }}
-    <article class="post">
-      {{ if lt 3 $index }}
-        <img class="album-thumbnail" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACwAAAAAAQABAAACAkQBADs=" data-src="/images/{{ .Params.cover }}.jpg" onload="lzld(this)">
-      {{ else }}
-        <img class="album-thumbnail" src="/images/{{ .Params.cover }}.jpg">
-      {{ end }}
-      <div class="thumbnail-description">
-        <div class="thumbnail-title">{{ .Title }}</div>
-        <div class="thumbnail-artist">{{ .Params.artist }}</div>
-      </div>
-      {{ if .Site.Data.colors }}
-        {{ $colorinfo := index .Site.Data.colors .Title }}
-          <div class="expansion" data-background-color="{{ $colorinfo.background }}" data-secondary-colors="{{ $colorinfo.content }}">
-      {{ else }}
-        <div class="expansion">
-      {{ end }}
-        <h2>{{ .Title }}</h2>
-        <h3>{{ .Params.artist }}</h3>
-        {{ .Content }}
-      </div>
-        <div class="filler"></div>
-    </article>
+<main class="container">
+  {{ range $key, $taxonomy := .Site.Taxonomies.types }}
+  <div class="category">
+    <h2 class="category-name">{{ $key | pluralize | title }}</h2>
+    <div class="posts">
+      {{ range $index, $post := $taxonomy.Pages }}
+      <article class="post">
+        <img class="album-thumbnail" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACwAAAAAAQABAAACAkQBADs=" data-src="images/{{ .Params.cover }}.jpg" onload="lzld(this)">
+        <div class="thumbnail-description">
+          <div class="thumbnail-title">{{ .Title }}</div>
+          <div class="thumbnail-artist">{{ .Params.artist }}</div>
+        </div>
+        {{ if .Site.Data.colours }}
+          {{ $colourinfo := index .Site.Data.colours .Title }}
+            <div class="expansion" data-background-colour="{{ $colourinfo.background }}" data-secondary-colours="{{ $colourinfo.content }}">
+        {{ else }}
+          <div class="expansion">
+        {{ end }}
+          <h2>{{ .Title }}</h2>
+          <h3>{{ .Params.artist }}</h3>
+          {{ .Content }}
+        </div>
+          <div class="filler"></div>
+      </article>
+    {{ end }}
+    </div>
+  </div>
   {{ end }}
 </main>
-{{ partial "footer.html" . }}
+
+</body>
+</html>
