--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>{{ .Site.Title }}</title>
+  <meta name="description" content="{{ .Site.Params.description }}">
   <link rel="shortcut icon" href="favicon/logo.ico">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/normalize.css">
