Update slideup and down with velocity
Signed-off-by: Lau Siaw Young <lausiawyoung@gmail.com>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/dist/style.css">
   <script src="js/jquery.js"></script>
+  <script src="js/velocity.js"></script>
   <script src="js/lazyload.min.js"></script>
   {{ if .Site.Params.browserProcessing }}
     <script src="js/colibri.min.js"></script>
